@@ -173,39 +173,6 @@ class NotGiven(object):
     pass
 
 
-class DeclarativeException(Exception):
-    """A simpler way to define an exception with a fixed message.
-
-    Subclasses have a class attribute ``.message``, which is used if no
-    message is passed to the constructor. The default message is the empty
-    string.
-
-    Example::
-
-        >>> class MyException(DeclarativeException):
-        ...     message="can't frob the bar when foo is enabled"
-        ...
-        >>> try:
-        ...     raise MyException()
-        ... except Exception, e:
-        ...      print e
-        ...
-        can't frob the bar when foo is enabled
-    """
-    message = ""
-
-    def __init__(self, message=None):
-        Exception.__init__(self, message or self.message)
-
-
-class OverwriteError(Exception):
-    """Refusing to overwrite an existing file or directory."""
-
-    def __init__(self, filename, message="not overwriting '%s'"):
-        message %= (filename,)
-        Exception.__init__(self, message)
-        self.filename = filename
-
 def format_exception(exc=None):
     """Format the exception type and value for display, without the traceback.
 
